--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,13 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body style="overflow-x: hidden; overflow-y: hidden;">
     <!--
     Top Navbar of page
     -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar scroll</a>
+        <a class="navbar-brand" href="#">IOT Devices</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -79,13 +79,14 @@
     <!--
     Main Part of Page
     -->
-    <body class="row g-2">
+    <body class="row g-2" style="max-height: 400px">
       <!--
         Side bar that lists all devices
         -->
+
       <div
         class="d-flex flex-column align-items-stretch flex-shrink-0 bg-light"
-        style="width: 20%"
+        style="width: 20%; max-height: 400px; overflow-y: auto"
       >
         <a
           href="/"
@@ -94,7 +95,7 @@
           <svg class="bi me-2" width="30" height="24">
             <use xlink:href="#bootstrap"></use>
           </svg>
-          <span class="fs-5 fw-semibold">List group</span>
+          <span class="fs-5 fw-semibold">Devices</span>
         </a>
         <div class="list-group list-group-flush border-bottom scrollarea">
           <a
@@ -143,19 +144,103 @@
               date.
             </div>
           </a>
+          <a
+            href="#"
+            class="list-group-item list-group-item-action py-3 lh-tight"
+          >
+            <div
+              class="d-flex w-100 align-items-center justify-content-between"
+            >
+              <strong class="mb-1">List group item heading</strong>
+              <small class="text-muted">Mon</small>
+            </div>
+            <div class="col-10 mb-1 small">
+              Some placeholder content in a paragraph below the heading and
+              date.
+            </div>
+          </a>
+          <a
+            href="#"
+            class="list-group-item list-group-item-action py-3 lh-tight"
+          >
+            <div
+              class="d-flex w-100 align-items-center justify-content-between"
+            >
+              <strong class="mb-1">List group item heading</strong>
+              <small class="text-muted">Mon</small>
+            </div>
+            <div class="col-10 mb-1 small">
+              Some placeholder content in a paragraph below the heading and
+              date.
+            </div>
+          </a>
         </div>
       </div>
 
       <!--
         Shows nodes(ways to interact with device)
         -->
-        <div style="width: 80%" class="bg-secondary">
-          <h3>Nodes Go here</h3>
-          <h3>Nodes Go here</h3>
-          <h3>Nodes Go here</h3>
-          <h3>Nodes Go here</h3>
-          <h3>Nodes Go here</h3>
-        </div>  
+      <div
+        style="width: 80%; max-height: 400px; overflow-y: auto"
+        class="bg-secondary"
+      >
+        <div
+          style="padding-top: 10px; padding-left: 20px; padding-right: 20px"
+          class="justify-content-center align-items-center"
+        >
+          <div class="card" style="width: 80%; margin: 3%; margin-top: 0;">
+            <img
+              src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
+              class="card-img-top"
+              alt="..."
+              style="width: 200px; height: 150px"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+          <div class="card" style="width: 80%; margin: 3%; margin-top: 0;">
+            <img
+              src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
+              class="card-img-top"
+              alt="..."
+              style="width: 200px; height: 150px"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+          <div class="card" style="width: 80%; margin: 3%; margin-top: 0;">
+            <img
+              src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
+              class="card-img-top"
+              alt="..."
+              style="width: 200px; height: 150px"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </body>
 
     <!--
