--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
   </head>
-  <body style="overflow-x: hidden; overflow-y: hidden;">
+  <body style="overflow-x: hidden; overflow-y: hidden">
     <!--
     Top Navbar of page
     -->
@@ -188,14 +188,37 @@
           style="padding-top: 10px; padding-left: 20px; padding-right: 20px"
           class="justify-content-center align-items-center"
         >
-          <div class="card" style="width: 80%; margin: 3%; margin-top: 0;">
-            <img
-              src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
-              class="card-img-top"
-              alt="..."
-              style="width: 200px; height: 150px"
-            />
-            <div class="card-body">
+          <div
+            class="row align-items-center"
+            style="
+              width: 80%;
+              margin: 3%;
+              margin-top: 0;
+              background-color: aliceblue;
+              border-radius: 10px;
+              padding: 2%;
+              padding-top: 3%;
+              padding-bottom: 3%;
+            "
+          >
+            <div
+              class="col"
+              style="
+                width: 60%;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+              "
+            >
+              <img
+                src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
+                class="col card-img-top"
+                alt="..."
+                style="max-width: 100%; height: auto"
+              />
+              <label>Graph Of ...</label>
+            </div>
+            <div class="col" style="width: 40%">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -205,14 +228,37 @@
             </div>
           </div>
 
-          <div class="card" style="width: 80%; margin: 3%; margin-top: 0;">
-            <img
-              src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
-              class="card-img-top"
-              alt="..."
-              style="width: 200px; height: 150px"
-            />
-            <div class="card-body">
+          <div
+            class="row align-items-center"
+            style="
+              width: 80%;
+              margin: 3%;
+              margin-top: 0;
+              background-color: aliceblue;
+              border-radius: 10px;
+              padding: 2%;
+              padding-top: 3%;
+              padding-bottom: 3%;
+            "
+          >
+            <div
+              class="col"
+              style="
+                width: 60%;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+              "
+            >
+              <img
+                src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
+                class="col card-img-top"
+                alt="..."
+                style="max-width: 100%; height: auto"
+              />
+              <label>Graph Of ...</label>
+            </div>
+            <div class="col" style="width: 40%">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -222,14 +268,37 @@
             </div>
           </div>
 
-          <div class="card" style="width: 80%; margin: 3%; margin-top: 0;">
-            <img
-              src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
-              class="card-img-top"
-              alt="..."
-              style="width: 200px; height: 150px"
-            />
-            <div class="card-body">
+          <div
+            class="row align-items-center"
+            style="
+              width: 80%;
+              margin: 3%;
+              margin-top: 0;
+              background-color: aliceblue;
+              border-radius: 10px;
+              padding: 2%;
+              padding-top: 3%;
+              padding-bottom: 3%;
+            "
+          >
+            <div
+              class="col"
+              style="
+                width: 60%;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+              "
+            >
+              <img
+                src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
+                class="col card-img-top"
+                alt="..."
+                style="max-width: 100%; height: auto"
+              />
+              <label>Graph Of ...</label>
+            </div>
+            <div class="col" style="width: 40%">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">
                 Some quick example text to build on the card title and make up
@@ -238,7 +307,6 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-
         </div>
       </div>
     </body>
