--- a/templates/index.html
+++ b/templates/index.html
@@ -1,355 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>IOT Webview</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body style="overflow-x: hidden; overflow-y: hidden">
-    <!--
-    Top Navbar of page
-    -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">IOT Devices</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarScroll"
-          aria-controls="navbarScroll"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-          <ul
-            class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll"
-            style="--bs-scroll-height: 100px"
-          >
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
+{% extends "layout.html" %} {% block body %}
+<body>
+  <!-- Header-->
+  <header class="bg-dark py-5" style="height: 80vh;">
+    <div class="container px-5">
+      <div class="row gx-5 justify-content-center">
+        <div class="col-lg-6">
+          <div class="text-center my-5">
+            <h1 class="display-5 fw-bolder text-white mb-2">
+              Welcome Home
+            </h1>
+            <p class="lead text-white-50 mb-4">
+              Enjoy the freedom of tracking your devices from anywhere
+            </p>
+            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+              <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features"
+                >Get Started</a
               >
-                Link
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Link</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
+              <a class="btn btn-outline-light btn-lg px-4" href="#!"
+                >Learn More</a
+              >
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
+    </div>
+  </header>
+</body>
 
-    <!--
-    Main Part of Page
-    -->
-    <body class="row g-2" style="max-height: 400px">
-      <!--
-        Side bar that lists all devices
-        -->
-
-      <div
-        class="d-flex flex-column align-items-stretch flex-shrink-0 bg-light"
-        style="width: 20%; max-height: 400px; overflow-y: auto"
-      >
-        <a
-          href="/"
-          class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom"
-        >
-          <svg class="bi me-2" width="30" height="24">
-            <use xlink:href="#bootstrap"></use>
-          </svg>
-          <span class="fs-5 fw-semibold">Devices</span>
+<!-- Features section-->
+<section class="py-5 border-bottom" id="features">
+  <div class="container px-5 my-5">
+    <div class="row gx-5">
+      <div class="col-lg-4 mb-5 mb-lg-0">
+        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
+          <i class="bi bi-collection"></i>
+        </div>
+        <h2 class="h4 fw-bolder">Featured title</h2>
+        <p>
+          Paragraph of text beneath the heading to explain the heading. We'll
+          add onto it with another sentence and probably just keep going until
+          we run out of words.
+        </p>
+        <a class="text-decoration-none" href="#!">
+          Call to action
+          <i class="bi bi-arrow-right"></i>
         </a>
-        <div class="list-group list-group-flush border-bottom scrollarea">
-          <a
-            href="#"
-            class="list-group-item list-group-item-action active py-3 lh-tight"
-            aria-current="true"
-          >
-            <div
-              class="d-flex w-100 align-items-center justify-content-between"
-            >
-              <strong class="mb-1">List group item heading</strong>
-              <small>Wed</small>
-            </div>
-            <div class="col-10 mb-1 small">
-              Some placeholder content in a paragraph below the heading and
-              date.
-            </div>
-          </a>
-          <a
-            href="#"
-            class="list-group-item list-group-item-action py-3 lh-tight"
-          >
-            <div
-              class="d-flex w-100 align-items-center justify-content-between"
-            >
-              <strong class="mb-1">List group item heading</strong>
-              <small class="text-muted">Tues</small>
-            </div>
-            <div class="col-10 mb-1 small">
-              Some placeholder content in a paragraph below the heading and
-              date.
-            </div>
-          </a>
-          <a
-            href="#"
-            class="list-group-item list-group-item-action py-3 lh-tight"
-          >
-            <div
-              class="d-flex w-100 align-items-center justify-content-between"
-            >
-              <strong class="mb-1">List group item heading</strong>
-              <small class="text-muted">Mon</small>
-            </div>
-            <div class="col-10 mb-1 small">
-              Some placeholder content in a paragraph below the heading and
-              date.
-            </div>
-          </a>
-          <a
-            href="#"
-            class="list-group-item list-group-item-action py-3 lh-tight"
-          >
-            <div
-              class="d-flex w-100 align-items-center justify-content-between"
-            >
-              <strong class="mb-1">List group item heading</strong>
-              <small class="text-muted">Mon</small>
-            </div>
-            <div class="col-10 mb-1 small">
-              Some placeholder content in a paragraph below the heading and
-              date.
-            </div>
-          </a>
-          <a
-            href="#"
-            class="list-group-item list-group-item-action py-3 lh-tight"
-          >
-            <div
-              class="d-flex w-100 align-items-center justify-content-between"
-            >
-              <strong class="mb-1">List group item heading</strong>
-              <small class="text-muted">Mon</small>
-            </div>
-            <div class="col-10 mb-1 small">
-              Some placeholder content in a paragraph below the heading and
-              date.
-            </div>
-          </a>
-        </div>
       </div>
-
-      <!--
-        Shows nodes(ways to interact with device)
-        -->
-      <div
-        style="width: 80%; max-height: 400px; overflow-y: auto"
-        class="bg-secondary"
-      >
-        <div
-          style="padding-top: 10px; padding-left: 20px; padding-right: 20px"
-          class="justify-content-center align-items-center"
-        >
-          <div
-            class="row align-items-center"
-            style="
-              width: 80%;
-              margin: 3%;
-              margin-top: 0;
-              background-color: aliceblue;
-              border-radius: 10px;
-              padding: 2%;
-              padding-top: 3%;
-              padding-bottom: 3%;
-            "
-          >
-            <div
-              class="col"
-              style="
-                width: 60%;
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-              "
-            >
-              <img
-                src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
-                class="col card-img-top"
-                alt="..."
-                style="max-width: 100%; height: auto"
-              />
-              <label>Graph Of ...</label>
-            </div>
-            <div class="col" style="width: 40%">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-
-          <div
-            class="row align-items-center"
-            style="
-              width: 80%;
-              margin: 3%;
-              margin-top: 0;
-              background-color: aliceblue;
-              border-radius: 10px;
-              padding: 2%;
-              padding-top: 3%;
-              padding-bottom: 3%;
-            "
-          >
-            <div
-              class="col"
-              style="
-                width: 60%;
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-              "
-            >
-              <img
-                src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
-                class="col card-img-top"
-                alt="..."
-                style="max-width: 100%; height: auto"
-              />
-              <label>Graph Of ...</label>
-            </div>
-            <div class="col" style="width: 40%">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-
-          <div
-            class="row align-items-center"
-            style="
-              width: 80%;
-              margin: 3%;
-              margin-top: 0;
-              background-color: aliceblue;
-              border-radius: 10px;
-              padding: 2%;
-              padding-top: 3%;
-              padding-bottom: 3%;
-            "
-          >
-            <div
-              class="col"
-              style="
-                width: 60%;
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-              "
-            >
-              <img
-                src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
-                class="col card-img-top"
-                alt="..."
-                style="max-width: 100%; height: auto"
-              />
-              <label>Graph Of ...</label>
-            </div>
-            <div class="col" style="width: 40%">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
+      <div class="col-lg-4 mb-5 mb-lg-0">
+        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
+          <i class="bi bi-building"></i>
         </div>
+        <h2 class="h4 fw-bolder">Featured title</h2>
+        <p>
+          Paragraph of text beneath the heading to explain the heading. We'll
+          add onto it with another sentence and probably just keep going until
+          we run out of words.
+        </p>
+        <a class="text-decoration-none" href="#!">
+          Call to action
+          <i class="bi bi-arrow-right"></i>
+        </a>
       </div>
-    </body>
-
-    <!--
-      Footer of Page
-    -->
-    <body>
-      <div class="row">
-        <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">
-                With supporting text below as a natural lead-in to additional
-                content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
+      <div class="col-lg-4">
+        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
+          <i class="bi bi-toggles2"></i>
         </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">
-                With supporting text below as a natural lead-in to additional
-                content.
-              </p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
+        <h2 class="h4 fw-bolder">Featured title</h2>
+        <p>
+          Paragraph of text beneath the heading to explain the heading. We'll
+          add onto it with another sentence and probably just keep going until
+          we run out of words.
+        </p>
+        <a class="text-decoration-none" href="#!">
+          Call to action
+          <i class="bi bi-arrow-right"></i>
+        </a>
       </div>
-    </body>
-
-    <!--
-    Javascript linking scripts to website
-    -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+    </div>
+  </div>
+</section>
+{% endblock %}
