--- a/templates/nodes.html
+++ b/templates/nodes.html
@@ -1,53 +1,132 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nodes Testing</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
+{% extends "tracker.html" %} {% block view %}
+
+<!--
+  List of all nodes relating to device
+-->
+
+<div
+  style="padding-top: 10px; padding-left: 20px; padding-right: 20px"
+  class="justify-content-center align-items-center"
+>
+  <div
+    class="row align-items-center"
+    style="
+      width: 80%;
+      margin: 3%;
+      margin-top: 0;
+      background-color: aliceblue;
+      border-radius: 10px;
+      padding: 2%;
+      padding-top: 3%;
+      padding-bottom: 3%;
+    "
+  >
     <div
-      style="width: 80%; max-height: 600px; height: 600px; overflow-y: auto"
-      class="bg-secondary"
+      class="col"
+      style="
+        width: 60%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+      "
     >
-      <div
-        style="padding-top: 10px; padding-left: 20px; padding-right: 20px"
-        class="justify-content-center align-items-center container"
-      >
-        <div>
-
-
-            <div class="row align-items-center" style="width: 80%; margin: 3%; margin-top: 0; background-color: aliceblue; border-radius: 10px; padding: 2%; padding-top: 3%; padding-bottom: 3%;">
-                <div class="col" style="width: 60%; display: flex; align-items: center; flex-direction: column;">
-                <img 
-                    src="https://www.siyavula.com/read/za/mathematics/grade-8/graphs/images/figure-23-02-640.png"
-                    class="col card-img-top"
-                    alt="..."
-                    style="max-width: 100%; height: auto"
-                    />
-                    <label>Graph Of ...</label>
-                </div>
-                <div class="col" style="width: 40%;">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                        Some quick example text to build on the card title and make up the
-                        bulk of the card's content.
-                    </p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-
-            <div class="row align-items-center" style="width: 80%; margin: 3%; margin-top: 0; background-color: aliceblue; border-radius: 10px; padding: 2%; padding-top: 3%; padding-bottom: 3%;">
-
-            </div>
-            
-
-      </div>
-      </div>
+      <img
+        src="https://images.ctfassets.net/pdf29us7flmy/4FaqpZFMenRQoDl0LGqFes/02c40a20ee37917f3e117b9c599f132d/GOLD-6487-CareerGuide-Batch04-Images-GraphCharts-01-Line.png?w=1440&q=100&fm=avif"
+        class="col card-img-top"
+        alt="..."
+        style="max-width: 100%; max-height: 100%"
+      />
+      <label>Graph Of ...</label>
     </div>
-  </body>
-</html>
+    <div class="col" style="width: 40%">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk
+        of the card's content.
+      </p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+  <div
+    class="row align-items-center"
+    style="
+      width: 80%;
+      margin: 3%;
+      margin-top: 0;
+      background-color: aliceblue;
+      border-radius: 10px;
+      padding: 2%;
+      padding-top: 3%;
+      padding-bottom: 3%;
+    "
+  >
+    <div
+      class="col"
+      style="
+        width: 60%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+      "
+    >
+      <img
+        src="https://images.ctfassets.net/pdf29us7flmy/4FaqpZFMenRQoDl0LGqFes/02c40a20ee37917f3e117b9c599f132d/GOLD-6487-CareerGuide-Batch04-Images-GraphCharts-01-Line.png?w=1440&q=100&fm=avif"
+        class="col card-img-top"
+        alt="..."
+        style="max-width: 100%; max-height: 100%"
+      />
+      <label>Graph Of ...</label>
+    </div>
+    <div class="col" style="width: 40%">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk
+        of the card's content.
+      </p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+  <div
+    class="row align-items-center"
+    style="
+      width: 80%;
+      margin: 3%;
+      margin-top: 0;
+      background-color: aliceblue;
+      border-radius: 10px;
+      padding: 2%;
+      padding-top: 3%;
+      padding-bottom: 3%;
+    "
+  >
+    <div
+      class="col"
+      style="
+        width: 60%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+      "
+    >
+      <img
+        src="https://images.ctfassets.net/pdf29us7flmy/4FaqpZFMenRQoDl0LGqFes/02c40a20ee37917f3e117b9c599f132d/GOLD-6487-CareerGuide-Batch04-Images-GraphCharts-01-Line.png?w=1440&q=100&fm=avif"
+        class="col card-img-top"
+        alt="..."
+        style="max-width: 100%; max-height: 100%"
+      />
+      <label>Graph Of ...</label>
+    </div>
+    <div class="col" style="width: 40%">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">
+        Some quick example text to build on the card title and make up the bulk
+        of the card's content.
+      </p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
