Added Wasm Sqlite3 module

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,11 +35,10 @@
         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
           <i class="bi bi-collection"></i>
         </div>
-        <h2 class="h4 fw-bolder">Featured title</h2>
+        <h2 class="h4 fw-bolder">Easy To Use</h2>
         <p>
-          Paragraph of text beneath the heading to explain the heading. We'll
-          add onto it with another sentence and probably just keep going until
-          we run out of words.
+          This software is free and easy to use. We employ techniques to simplify
+          the process of managing your devices. 
         </p>
         <a class="text-decoration-none" href="#!">
           Call to action
@@ -50,11 +49,10 @@
         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
           <i class="bi bi-building"></i>
         </div>
-        <h2 class="h4 fw-bolder">Featured title</h2>
+        <h2 class="h4 fw-bolder">Customizable</h2>
         <p>
-          Paragraph of text beneath the heading to explain the heading. We'll
-          add onto it with another sentence and probably just keep going until
-          we run out of words.
+          Users can customize their setup as they wish. Nodes can be created when needed
+          to show the correct information about a product.
         </p>
         <a class="text-decoration-none" href="#!">
           Call to action
@@ -65,11 +63,10 @@
         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
           <i class="bi bi-toggles2"></i>
         </div>
-        <h2 class="h4 fw-bolder">Featured title</h2>
+        <h2 class="h4 fw-bolder">Safe</h2>
         <p>
-          Paragraph of text beneath the heading to explain the heading. We'll
-          add onto it with another sentence and probably just keep going until
-          we run out of words.
+          This network is yours, you choose what to do with it and how to secure it. You have the ability
+          to place this network solely locally ensuring safety from any outside parties.
         </p>
         <a class="text-decoration-none" href="#!">
           Call to action
