--- a/templates/credits.html
+++ b/templates/credits.html
@@ -14,6 +14,22 @@
       </div>
     </div>
   </header>
+  <!--Tribute-->
+  <section style="background: rgb(198, 198, 198); height: 28vh; padding: 10%; display: flex; align-items: center; justify-content: center; ">
+    <div class="container px-5" style="display: flex; align-items: center; justify-content: center; flex-direction: column;">
+      <h2>The Project</h2>
+      <div style="text-align: center; width: 70%;" >
+        <p>
+          We created this project to enable people 
+          to safely analyze and administrate the many 
+          smart devices in your home. We are ever so 
+          dependant on the web as of late and it is a
+          responsibility of ours to properly manage our 
+          devices to ensure security and efficiency.
+        </p>
+      </div>
+    </div>
+  </section>
   <!-- Features section-->
   <section class="py-5 border-bottom" id="features">
     <div class="container px-5 my-5">
@@ -22,7 +38,7 @@
           <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3">
             <i class="bi bi-collection"></i>
           </div>
-          <h2 class="h4 fw-bolder">Featured title</h2>
+          <h2 class="h4 fw-bolder">Liam Israel</h2>
           <p>
             Paragraph of text beneath the heading to explain the heading. We'll
             add onto it with another sentence and probably just keep going until
